Fix background for dark mode on deadlist item list

--- a/src/styles/UserInfo.css
+++ b/src/styles/UserInfo.css
@@ -52,7 +52,6 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  background-color: white;
   border-radius: 20px;
   height: 75vh;
   overflow: auto;
